[package]
name = "polkadot-core-primitives"
version = "0.7.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "7314a78d49d0dc3862c6ef7c8115cb1b3d0c0fd2" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"codec/std",
]
