[package]
name = "polkadot-erasure-coding"
version = "0.8.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { package = "polkadot-primitives", path = "../primitives" }
reed_solomon = { package = "reed-solomon-erasure", version = "4.0.2" }
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
trie = { package = "sp-trie", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
thiserror = "1.0.22"
