[package]
name = "polkadot-erasure-coding"
version = "0.8.26-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { package = "polkadot-primitives", path = "../primitives" }
reed_solomon = { package = "reed-solomon-erasure", version = "4.0.2"}
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
trie = { package = "sp-trie", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
thiserror = "1.0.21"
