[package]
name = "polkadot-primitives"
version = "0.8.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.117", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
inherents = { package = "sp-inherents", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
application-crypto = { package = "sp-application-crypto", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-keystore = { git = "https://github.com/insipx/substrate", optional = true , branch = "insipx/testing" }
sp-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-version = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-std = { package = "sp-std", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-arithmetic = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-authority-discovery = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
polkadot-parachain = { path = "../parachain", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
frame-system = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }

[dev-dependencies]
sp-serializer = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-keystore",
	"sp-std/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
