[package]
name = "polkadot-rpc"
version = "0.8.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-blockchain = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-keystore = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-runtime = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-consensus = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-consensus-babe = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-chain-spec = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-consensus-babe = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-consensus-babe-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-consensus-epochs = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-finality-grandpa = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-finality-grandpa-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-keystore = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-sync-state-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
pallet-transaction-payment-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
parity-scale-codec = { version = "1.3.5", default-features = false }
sp-block-builder = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
