[package]
name = "polkadot-rpc"
version = "0.8.26-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-blockchain = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-keystore = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-runtime = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-consensus = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-consensus-babe = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-chain-spec = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-consensus-babe = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-consensus-babe-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-consensus-epochs = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-finality-grandpa = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-finality-grandpa-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-keystore = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-sync-state-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
pallet-transaction-payment-rpc = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
