[package]
name = "polkadot-statement-table"
version = "0.8.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
