[package]
name = "polkadot-statement-table"
version = "0.8.28-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/insipx/substrate/", branch = "wasm-backports-0.8.28" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
