[package]
name = "polkadot-validation"
version = "0.8.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
sp-blockchain = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-timestamp = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-basic-authorship = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
consensus = { package = "sp-consensus", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
futures = "0.3.8"
log = "0.4.11"
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
inherents = { package = "sp-inherents", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
primitives = { package = "sp-core", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-client-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
block-builder = { package = "sc-block-builder", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
trie = { package = "sp-trie", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
thiserror = "1.0.22"

[dev-dependencies]
sp-keyring = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
