[package]
name = "polkadot-node-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
futures = "0.3.12"
polkadot-primitives = { path = "../../primitives" }
polkadot-statement-table = { path = "../../statement-table" }
parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/insipx/substrate/", default-features = false , branch = "wasm-backports-0.8.28" }
sp-core = { git = "https://github.com/insipx/substrate/", branch = "wasm-backports-0.8.28" }
sp-consensus-vrf = { git = "https://github.com/insipx/substrate/", branch = "wasm-backports-0.8.28" }
sp-consensus-slots = { git = "https://github.com/insipx/substrate/", default-features = false , branch = "wasm-backports-0.8.28" }
