[package]
name = "polkadot-service-new"
version = "0.8.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
polkadot-primitives = { path = "../../primitives" }
polkadot-runtime = { path = "../../runtime/polkadot" }
polkadot-overseer = { path = "../overseer" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../subsystem" }
kusama-runtime = { path = "../../runtime/kusama" }
westend-runtime = { path = "../../runtime/westend" }
polkadot-rpc = { path = "../../rpc" }
polkadot-node-core-proposer = { path = "../core/proposer" }
sp-io = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-runtime = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-blockchain = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-core = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-client-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-client-db = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-chain-spec = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-executor = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-consensus = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-network = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-storage = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-trie = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
consensus_common = { package = "sp-consensus", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
inherents = { package = "sp-inherents", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
service = { package = "sc-service", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
telemetry = { package = "sc-telemetry", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-block-builder = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-transaction-pool = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-transaction-pool = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sc-keystore = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-babe = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-staking = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-im-online = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
babe = { package = "sc-consensus-babe", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-block-builder = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
frame-system-rpc-runtime-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
codec = { package = "parity-scale-codec", version = "1.3.4" }
sp-session = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
frame-benchmarking = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
env_logger = "0.7.0"

[features]
default = ["db", "full-node"]
db = ["service/db"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks", "westend-runtime/runtime-benchmarks"]
full-node = []
