[package]
name = "polkadot-runtime-common"
version = "0.8.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"

sp-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
inherents = { package = "sp-inherents", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-std = { package = "sp-std", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-io = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-runtime = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-core = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }

pallet-authorship = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-balances = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
frame-support = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
frame-system = {git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-timestamp = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-vesting = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-offences = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-transaction-payment = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
frame-benchmarking = { git = "https://github.com/insipx/substrate", default-features = false, optional = true , branch = "insipx/testing-0.8.25" }

primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
libsecp256k1 = { version = "0.3.2", default-features = false, optional = true }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
keyring = { package = "sp-keyring", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-trie = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-babe = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-application-crypto = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-randomness-collective-flip = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-staking-reward-curve = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
pallet-treasury = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
trie-db = "0.22.0"
serde_json = "1.0.41"
libsecp256k1 = "0.3.2"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"codec/std",
	"log",
	"rustc-hex/std",
	"serde_derive",
	"serde/std",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"pallet-transaction-payment/std",
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
